--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,17 +1,6 @@
-body {
-  background-color: #D8BFD8; 
-  color: #333; 
-}
+@import "tailwindcss";
 
-button {
-  background-color: #D8BFD8; 
-  color: white;
-  border: none;
-  padding: 10px 15px;
-  border-radius: 5px;
-  cursor: pointer;
-}
 
-button:hover {
-  background-color: #C8A2C8; 
+@layer components{
+    
 }
